# ZoKrates

./: Cargo.toml
zokrates_credential/: Cargo.toml  private_key.pem  public_key.pem  signature.sig  signature_s
zokrates_credential/src/: eddsa.rs  credential.rs  credential_sample.rs  lib.rs
zokrates_credential/zok/case1/: verify_credential.zok
zokrates_credential/zok/case1/issuer/: create_hash.zok  witness.txt
zokrates_credential/zok/case2/: create_hash.zok  verify_credential.zok
zokrates_credential/zok/verifier/: verify_credential.zok
