[package]
name = "zokrates_credential"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }
zokrates_field = { version = "0.5", path = "../zokrates_field", features = ["multicore"] }
jsonwebtoken = "9"
# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "9", default-features = false }
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
base64 = "0.13.0"
ed25519-dalek = "1.0"
rand = "0.7"
sha2 = "0.9"